2010-09-21  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (Fgethostname): New function.

2010-09-20  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/time.cc (Fmktime): New tests (bug #31079).

2010-09-20  John W. Eaton  <jwe@octave.org>

	Bug #31085:

	* file-io.cc (do_stream_open): Use fopen, fileno, and gzdopen
	instead of gzopen.  Pass integer file id to
	octave_zstdiostream::create.

	* oct-stdstrm.h (class octave_base_tstdiostream): Rename from
	octave_tstdiostream.
	(octave_tstdiostream::fnum): New data member.
	(octave_tstdiostream::file_number): New member function.
	(octave_tstdiostream::octave_tstdiostream): New arg, FID.
	(octave_tstdiostream::create): Delete.
	(class octave_stdiostream, class octave_zstdiostream): New
	non-template classes derived from octave_tstdiostream to replace
	typedefs.

	* oct-stream.h (octave_base_stream::file_number): Now virtual
	and const.  Return -1 in defaault implementation.

2010-09-20  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list) [HAVE_PCRE]:
	Break from search loop if idx is at or beyond end of buffer
	(bug #31056).

2010-09-19  Ben Abbott <bpabbott@mac.com>

	* graphics.h.in: Add displayname property to patch and surface objects.

2010-09-18  David Bateman  <dbateman@free.fr>

	* graphics.h.in: Remove properties for dead legend code.

2010-09-18  Ben Abbott <bpabbott@mac.com>

	* graphics.cc: Replace pagetype property value custom with <custom>.

2010-09-16  David Bateman  <dbateman@free.fr>

	* graphics.cc (static Matrix screen_size_pixels (void), static Matrix
	papersize_from_type (const caseless_str, const caseless_str))): New
	functions.
	(void figure::properties::set_paperunits (const octave_value&),
	void figure::properties::set_papertype (const octave_value&),
	void figure::properties::update_paperunits (const caseless_str&))
	void figure::properties::update_papertype (void),
	void figure::properties::update_papersize (void),